--- a/schoolmgmtsytem.vbproj
+++ b/schoolmgmtsytem.vbproj
@@ -6,6 +6,7 @@
     <StartupObject>schoolmgmtsytem.My.MyApplication</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
